# madshelf

./: .gitignore  AUTHORS  Makefile.am  acinclude.m4  autogen.sh  configure.in
.tx/: config
data/: Makefile.am  madaudio.desktop  madaudio.ini  madshelf.ini  mpd.conf
debian/: changelog  config-n516  config-v3  control  copyright  disks.conf  madshelf-positions-cr3.install  madshelf-positions-fbreader.install  madshelf.dirs  madshelf.install  n516-keys.ini  n516-prefs.conf  prs505-keys.ini  rules
debian/.madshelf/: config  filters.xml
debian/.madshelf/scripts/: dpkg_script  etimetool.sh
help/: madshelf.ini
help/madshelf/en/: index.help  madshelf1.help  madshelf2.help  madshelf3.help  madshelf4.help
help/madshelf/ru/: index.help  madshelf1.help  madshelf2.help  madshelf3.help  madshelf4.help
help/madshelf/uk/: index.help  madshelf1.help  madshelf2.help  madshelf3.help  madshelf4.help
po/: Makefile.am  POTFILES  be.po  bg.po  ca.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  lv.po  madshelf.pot  nl.po  pl.po  ru.po  sv.po  ua.po  uk.po  vi.po  zh.po  zh_CN.po
src/: Makefile.am  app_defaults.c  app_defaults.h  audio.c  battery.c  battery.h  clipboard.c  clock.c  clock.h  config.h.in  curdir.c  curdir.h  delete_file.c  delete_file.h  dir.c  dir.h  disk_size.c  disk_size.h  disks.c  disks.h  empd.h  empd_callback.c  empd_io.c  empd_playlist.c  empd_recv.c  empd_send.c  favorites.c  favorites.h  favorites_menu.c  favorites_menu.h  file_context_menu.c  file_context_menu.h  fileinfo.c  fileinfo.h  fileinfo_render.c  fileinfo_render.h  filters.c  filters.h  handlers.c  handlers.h  (+32 more)
themes/: Makefile.am  delete-confirm.edc  delete-confirm.edj  echoicebox.edci  madaudio.edc  madaudio.edj  madshelf.edc  madshelf.edj  main_window.edc  main_window.edj
themes/azbooka/: Makefile.am  madshelf.edc
themes/default/: Makefile.am  madshelf.edc
