AC_PREREQ(2.57)
AC_INIT(madshelf, 0.1, quickhand@openinkpot.org)
AM_INIT_AUTOMAKE(foreign)

AC_PROG_CC

PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES(EFL, [eina-0 ecore-evas ecore-config efreet efreet-mime edje])
PKG_CHECK_MODULES(EXTRACT, [libextractor_mini])
PKG_CHECK_MODULES(SQLITE, [sqlite3])
PKG_CHECK_MODULES(LIBCHOICEBOX, [libchoicebox])
PKG_CHECK_MODULES(LIBEOI, [libeoi])
PKG_CHECK_MODULES(LIBKEYS, [libkeys])

AC_OUTPUT(Makefile src/Makefile themes/Makefile po/Makefile data/Makefile)
