AC_PREREQ(2.57)
AC_INIT(madshelf, 0.1, quickhand@openinkpot.org)
AM_INIT_AUTOMAKE(foreign)

AC_PROG_CC
AM_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES(EFL, [eina ecore-evas ecore-file ecore-con efreet efreet-mime edje])
PKG_CHECK_MODULES(EXTRACT, [libextractor_mini])
PKG_CHECK_MODULES(SQLITE, [sqlite3])
PKG_CHECK_MODULES(LIBCHOICEBOX, [libchoicebox])
PKG_CHECK_MODULES(LIBEOI, [libeoi])
PKG_CHECK_MODULES(LIBKEYS, [libkeys])

AC_OUTPUT(Makefile src/Makefile themes/Makefile themes/default/Makefile themes/azbooka/Makefile po/Makefile data/Makefile)
